--- a/pages/Research/emoji-steganography/index.html
+++ b/pages/Research/emoji-steganography/index.html
@@ -126,7 +126,14 @@
 
       <div>
         <label for="secretInput">Secret Message</label>
-        <textarea id="secretInput" rows="3" placeholder="Secret text..."></textarea>
+        <textarea 
+          id="secretInput" 
+          rows="3" 
+          placeholder="Secret text..." 
+          autocomplete="off" 
+          data-lpignore="true" 
+          data-form-type="other"
+        ></textarea>
       </div>
 
       <div>
