--- a/pages/Utilities/Download-Assets/index.html
+++ b/pages/Utilities/Download-Assets/index.html
@@ -138,7 +138,7 @@
 
 <div class="app">
   <header>
-    <div class="brand">AssetSucker <span>Pro</span></div>
+    <div class="brand">Download Assets <span>Pro</span></div>
     <div class="controls">
       <input type="url" id="urlInput" placeholder="https://website.com" style="width: 240px;">
       <button class="btn primary" id="scrapeBtn">Web Scan</button>
